--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,6 +24,7 @@ h1{
 }
 
 .header{
+  height: 32vh;
   background-image: url(../assets/imagenes/pexels-julias-torten-und-tortchen-434418-1120464.jpg);
   background-size: cover;  
   background-position: center;
@@ -46,19 +47,22 @@ h1{
     color: black;
 
 }
+
+.navbar>.container, .navbar>.container-fluid, .navbar>.container-lg,  
+.navbar>.container-md, .navbar>.container-sm, 
+.navbar>.container-xl, .navbar>.container-xxl{
+  position: absolute;
+  margin-top: 0;
+  margin-right: 0;
+color: black;
+}
+
+
+
+
 }
 .somos{
   font-size: 1rem;
-}
-.carrito{
-height: 300px;
-background: lightblue;
-}
-.formulario{
-padding: 10px;
-}
-.muffins1{
-  margin-top: 50px;
 }
 
 .carousel-item{
@@ -110,7 +114,7 @@ background: bisque;
   
     .items{
       width: 250px;
-      height: 250px;
+      height:400px;
       border: 1px solid gray;
       padding: 10px;
       border-radius: 5px;
@@ -120,7 +124,7 @@ background: bisque;
     
       img{
         width: 100%;
-        height: 90%;
+        height: 75%;
         object-fit: cover;
       }
     }
@@ -242,6 +246,46 @@ header,footer{
 text-align: right;
 }
 
+  @media screen and (max-width: 876px) {
+    .header {
+      position: relative;
+    height: 30vw;
+    }
+  
+
+  
+    .header a img {
+      width: 10vh;
+    }
+    .navbar .navbar-expand-lg .navbar-light {
+    
+      top: 0;
+      margin-top: 0;
+      padding-top: 0;
+    
+    }
+    .header .nombre_grande {
+      font-size: 50px;
+    }
+  
+    .header .pasteleria {
+      font-size: 20px;
+    }
+  
+    .header .navbar-collapse {
+    
+      border-radius: 5px;
+      
+  
+    .header .navbar-toggler {
+      width: 20vh;
+      border-radius: 5px; 
+  
+    }
+  }
+  
+  
+}
 
 
 
